--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>OpenAI CLIP Image Search in JavaScript (Using ONNX Web Runtime)</title>
     <script src="enable-threads.js"></script>
   </head>
