--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>OpenAI CLIP Image Search in JavaScript (Using ONNX Web Runtime)</title>
     <script src="enable-threads.js"></script>
+    <script src="./vips/vips.js"></script>
   </head>
   <body>
     <style>
@@ -127,6 +127,8 @@
 
         let Tokenizer = (await import("https://deno.land/x/clip_bpe@v0.0.6/mod.js")).default;
         textTokenizer = new Tokenizer();
+
+        window.vips = await Vips(); // for bicubicly resizing images (since that's what CLIP expects)
 
         workerInitProgressBarEl.value = Number(workerInitProgressBarEl.value) + 1;
 
@@ -296,11 +298,13 @@
       
       async function getRgbData(blob) {
         // let blob = await fetch(imgUrl, {referrer:""}).then(r => r.blob());
-        let img = await createImageBitmap(blob);
+
+        let resizedBlob = await bicubicResizeAndCenterCrop(blob);
+        let img = await createImageBitmap(resizedBlob);
 
         let canvas = new OffscreenCanvas(224, 224);
         let ctx = canvas.getContext("2d");
-        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        ctx.drawImage(img, 0, 0);
         let imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
 
         let rgbData = [[], [], []]; // [r, g, b]
@@ -322,6 +326,28 @@
         }
         rgbData = Float32Array.from(rgbData.flat().flat());
         return rgbData;
+      }
+
+      async function bicubicResizeAndCenterCrop(blob) {
+        let im = vips.Image.newFromBuffer(await blob.arrayBuffer());
+
+        // Resize so smallest side is 224px:
+        let resizeFactor = 1;
+        if(im.width > im.height) {
+            resizeFactor = 224/im.height;
+        } else {
+            resizeFactor = 224/im.width; 
+        }
+
+        im = im.resize(resizeFactor, {kernel:vips.Kernel.cubic});
+
+        // crop to 224x224:
+        let left = (im.width - 224)/2;
+        let top = (im.height - 224)/2;
+        im = im.crop(left, top, 224, 224)
+
+        let outBuffer = new Uint8Array(im.writeToBuffer('.png'));
+        return new Blob([outBuffer], { type: 'image/png' });
       }
 
 
