--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div id="existingEmbeddingsFoundCtnEl" style="display:none; padding:0.5rem; background:lightgrey; margin:0.5rem;">
         <b>Step 3:</b> <b>Existing embeddings found.</b>
         <br>
-        Only needed if you've added or changed images: <button onclick="existingEmbeddingsFoundCtnEl.style.display='none'; computeEmbeddingsCtnEl.style.display=''; disableCtn(searchCtnEl); computeEmbeddingsBtn.click()">re-compute image embeddings</button>
+        Only needed if you've added or changed images: <button onclick="existingEmbeddingsFoundCtnEl.style.display='none'; computeEmbeddingsCtnEl.style.display=''; disableCtn(searchCtnEl); computeEmbeddingsBtn.click()">(re)compute image embeddings</button>
         <input id="onlyEmbedNewImagesCheckbox" type="checkbox" checked> Only new images?
       </div>
 
