--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         }
         
         if(dataSource === "reddit") {
-          disableCtn(computeEmbeddingsCtnEl);
+          disableCtn(existingEmbeddingsFoundCtnEl);
         }
         
       }
