--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           }
           if(dataSource === "reddit") {
             let imageUrl = `https://i.redd.it/${path.split("__")[1]}`;
-            let postUrl = `https://reddit.com/comments/${path.split("__")[0]}`;
+            let postUrl = `https://reddit.com/comments/${path.split("__")[0].split("/")[1]}`;
             resultHtml += `<a href="${postUrl}" target="_blank"><img src="${imageUrl}" style="max-height:400px;" title="${path}: ${score}"/></a>`;
           }
           numResults++;
