--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
     
     <div>
       <h1 style="font-size:1rem;">Sort/search images using OpenAI's CLIP in your browser</h1>
-      <p>This web app sorts/searches through images in a directory on your computer using OpenAI's CLIP model, and the new File System Access API. The Github repo for this page is <a href="https://github.com/josephrocca/clip-image-sorter">here</a>. See <a href="https://github.com/josephrocca/openai-clip-js">this Github repo</a> for more details on the web-ported CLIP models.</p>
-      <p>Note that everything happens in your browser - there is no server involved.</p>
+      <p>This web app sorts/searches through images in a directory on your computer using OpenAI's CLIP model, and the new File System Access API. <a href="https://github.com/josephrocca/clip-image-sorter">Here's the Github repo</a> for this web app, and <a href="https://github.com/josephrocca/openai-clip-js">here's the Github repo</a> for the web-ported CLIP models.</p>
+      <p>All processing happens in your browser, on your device - i.e. your images are <b>not</b> uploaded to a server for processing.</p>
+      <p id="browserCompatibilityWarning" style="padding:0.25rem; background:rgb(255, 227, 160); display:none;"><b>Note</b>: This page uses new browser features (File System Access API, and credentialless COEP) that are currently only available in some browsers. As of writing, it works in Chrome, Edge and Brave. Firefox and Safari are a bit slower in implementing cutting-edge features.</p>
+      <script>
+        if(Date.now() < 1648725949710+1000*60*60*24*365) { // display until start of April 2023
+          browserCompatibilityWarning.style.display = "";
+        }
+      </script>
       <hr>
       
       <div id="initCtnEl" style="padding:0.5rem; background:lightgrey; margin:0.5rem;">
