--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
         }
         
         pickDirectoryBtn.textContent = "Done.";
+        useRedditImagesBtn.textContent = "Done.";
 
         disableCtn(pickDirCtnEl);
         enableCtn(computeEmbeddingsCtnEl);
