--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <hr>
     <b>Results</b> <span style="opacity:0.5;">(hover for cosine similarities)</span>
-    <div id="resultsEl" style="margin-top:1rem;"><span style="opacity:0.5;">Click the search button to compute the results.</span></div>
+    <div id="resultsEl" style="margin-top:1rem; min-height:100vh;"><span style="opacity:0.5;">Click the search button to compute the results.</span></div>
     
     <script>
       /////////////
