--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
               let img = tf.browser.fromPixels(inputImg);
               // img = tf.image.resizeBilinear(img, [224, 224]);
               img = tf.sub(tf.div(tf.expandDims(img), 127.5), 1);
+              img = img.transpose([0,2,1,3]); // swap rows/columns
               let float32RgbData = img.dataSync();
               
               const feeds = {'images': new ort.Tensor('float32', float32RgbData, [1,224,224,3])};
