--- a/index.html
+++ b/index.html
@@ -116,14 +116,13 @@
             modelUrl: 'https://huggingface.co/rocca/lit-web/resolve/main/embed_images.onnx',
             embed: async function(blob, session) {
               
-              // TODO: Remove tf from this code so you can remove the tfjs dependency
+              // TODO: Maybe remove tf from this code so you can remove the whole tfjs dependency
               blob = await bicubicResizeAndCenterCrop(blob);
               let inputImg = new Image();
               await new Promise(r => inputImg.onload=r, inputImg.src=URL.createObjectURL(blob));
-              let img = tf.browser.fromPixels(inputImg);
-              // img = tf.image.resizeBilinear(img, [224, 224]);
+              let img = tf.browser.fromPixels(newInputImg);
               img = tf.sub(tf.div(tf.expandDims(img), 127.5), 1);
-              img = img.transpose([0,2,1,3]); // swap rows/columns
+              console.log("Preprocessed image:", img, img.print(), img.dataSync())
               let float32RgbData = img.dataSync();
               
               const feeds = {'images': new ort.Tensor('float32', float32RgbData, [1,224,224,3])};
