--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       
       <div id="computeEmbeddingsCtnEl" style="opacity:0.5; pointer-events:none; padding:0.5rem; background:lightgrey; margin:0.5rem;">
-        <b>Step 4:</b> Compute image embeddings. <span style="opacity:0.5;">(they will be saved as clip_embeddings.tsv in the selected directory)</span>
+        <b>Step 4:</b> Compute image embeddings. <span style="opacity:0.5;">(they will be saved as <ModelName>_embeddings.tsv in the selected directory)</span>
         <br>
         <button id="computeEmbeddingsBtn" onclick="computeImageEmbeddings(); this.disabled=true;">compute image embeddings</button>
         <br>
