--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <div id="modelNameSelectCtn" style="padding:0.5rem; background:lightgrey; margin:0.5rem;">
         <b>Step 1:</b> Choose model:
         <select onchange="window.MODEL_NAME=this.value;">
-          <option value="clip_vit_32">CLIP ViT-B/32</option>
-          <option value="lit_b16b">LiT B16B (not working well right now)</option>
+          <option value="clip_vit_32">CLIP ViT-B/32 (recommended)</option>
+          <option value="lit_b16b">LiT B16B</option>
         </select>
       </div>
       
