--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <b>Step 1:</b> Choose model:
         <select onchange="window.MODEL_NAME=this.value;">
           <option value="clip_vit_32">CLIP ViT-B/32 (recommended)</option>
-          <option value="clip_vit_32_uint8">CLIP ViT-B/32 uint8 quantized</option>
+          <option value="clip_vit_32_uint8">CLIP ViT-B/32 (quantized - inaccurate embeddings)</option>
           <option value="lit_b16b">LiT B16B</option>
         </select>
       </div>
