--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <button id="searchBtn" onclick="searchSort()">search</button> max results: <input id="maxResultsEl" type="number" value="100" style="width:50px;"> skip first: <input title="skip over this many of the most relevant results" id="skipFirstResultsNumEl" type="number" value="0" style="width:50px;"> score-based visibility: <button onclick="scoreBasedVisibilityCtnEl.style.display=''; this.remove();">enable</button>
         <div id="searchNoteEl" style="font-size:80%;"></div>
         <div id="scoreBasedVisibilityCtnEl" style="display:none;">
-          <textarea id="scoreBasedVisibilityRulesInputEl" style="width:100%; height:180px; white-space:nowrap;" placeholder="skip:>0.25:blue cat&#10;skip:&lt;0.21:elephant"></textarea>
+          <textarea id="scoreBasedVisibilityRulesInputEl" style="width:100%; height:180px; white-space:nowrap;" placeholder="mouse hover here to show examples of syntax - one filter rule per line" title="skip:>0.25:blue cat&#10;skip:&lt;0.21:elephant"></textarea>
         </div>
       </div>
     </div>
